  * Fixed the lsl.common.sdf.Stepped class so that the step lists of independent
  * Added the pointing correction keywords to the binary SSMIF reader
  * Fixed a bug in the calculation of cable delays
  * Fixed the order of the optional SESSION_* keywords in the SDF renderer
  * Updated the SDF parser to better work with SDFs that contain custom beamforming

0.6.2
  * Fixed a bug in splitDRX.py that caused the script to die if an --offset was passed in
  * Fixed a bug in lsl.common.mcs that caused binary packed files to be read in incorrectly on 32-bit installs
  * Fixed a bug in lsl.misc.beamformer that caused the beam simulators to fail when running in single-thread mode
  * Added frequency keywords to the integer delay-and-sum beamformer functions
  * Fixed a problem with the beam power pattern measured by lsl.misc.beamformer.intBeamShape
  * Overhaul of the lsl.common.sdf module to address Ticket #40 (OBS_DRX_GAIN problem) and to improve the render
  * Removed jinja2 as a dependency
  * Fixed a bug in lsl.common.sdf dealing with parsing LST times
  * Added the inspectTarball.py script
  * Added an option to the lsl.imaging.utils.CorrelatedData class to only return baselines in a certain uv range
  * Updated the LWA1 SSMIF to the 2013/1/23 version to include the LEDA outriggers

0.6.1
  * Added support for DROS metatags in the SESSION_SPC SDF keyword

0.6.0
  * Removed the correlator.fx.calcSpectra()/calcSpectrum() functions
  * Removed the lsl.common.warns module
  * Removed the LWAFS-specific modules since they are not needed for the new DROS v2
  * Updated the DR spectrometer reader (lsl.reader.drpsec) for the new DROS v2

0.5.5
  * Added in the pointing correction rotation code to lsl.common.mcs as applyPointingCorrecton()
  * Made the visibility simulations consistent with the output of lsl.correlator.fx.FXMaster()
  * Added a new lsl.writer.fitsidi.ExtendedIDI class to deal with more than 255 antennas